# pumpkin-hub

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  RAPPORT_AUDIT_PREPROD_BETA.md  README  README.md  docker-compose.prod.yml  docker-compose.yml  sonar-project.properties
api/: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev
api/migrations/: 001_create_users.up.sql  002_create_categories.up.sql  003_create_plugins.up.sql  004_create_plugin_categories.down.sql  004_create_plugin_categories.up.sql  005_create_versions.up.sql  006_seed_dev_data.down.sql  006_seed_dev_data.up.sql  007_multi_provider_auth.down.sql  007_multi_provider_auth.up.sql  008_unique_email.down.sql  008_unique_email.up.sql  009_user_avatars.up.sql  010_create_binaries.down.sql  010_create_binaries.up.sql  011_platforms_replace_architectures.down.sql  011_platforms_replace_architectures.up.sql  012_create_plugin_dependencies.down.sql  012_create_plugin_dependencies.up.sql  013_seed_plugin_dependencies.down.sql  013_seed_plugin_dependencies.up.sql  014_email_verification_and_password_reset.down.sql  014_email_verification_and_password_reset.up.sql  015_create_audit_logs.down.sql  015_create_audit_logs.up.sql  017_create_download_events.down.sql  017_create_download_events.up.sql  018_create_api_keys.up.sql  019_create_notifications.up.sql  020_api_key_enforcement_and_quotas.down.sql  020_api_key_enforcement_and_quotas.up.sql  021_create_github_installations.up.sql  022_create_reviews.up.sql  023_create_review_reports.down.sql  023_create_review_reports.up.sql  024_create_plugin_media.down.sql  024_create_plugin_media.up.sql  025_create_plugin_changelogs.down.sql  025_create_plugin_changelogs.up.sql  026_categories_refinement.down.sql  (+15 more)
api/seeds/: dev_data.sql
api/src/: config.rs  db.rs  email.rs  error.rs  lib.rs  main.rs  rate_limit.rs  state.rs
api/src/auth/: api_key_middleware.rs  discord.rs  github.rs  google.rs  jwt.rs  middleware.rs  mod.rs  password.rs
api/src/github/: client.rs
api/src/models/: auth_provider.rs  binary.rs  category.rs  github_installation.rs  mod.rs  plugin.rs  plugin_category.rs  plugin_changelog.rs  plugin_dependency.rs  plugin_media.rs  review.rs  user.rs  version.rs
api/src/routes/: auth.rs  health.rs  mod.rs  stats.rs  users.rs
api/src/routes/admin/: dto.rs  handlers.rs  mod.rs
api/src/routes/api_keys/: dto.rs  handlers.rs  mod.rs
api/src/routes/categories/: dto.rs  handlers.rs  mod.rs
api/src/routes/changelogs/: dto.rs  handlers.rs  mod.rs
api/src/routes/configurator/: dto.rs  handlers.rs  mod.rs
api/src/routes/dashboard/: dto.rs  handlers.rs  mod.rs
api/src/routes/github/: dto.rs  (+3 more)
api/src/search/: indexer.rs  mod.rs  pumpkin_versions.rs
api/src/storage/: mod.rs  pumpkin_binary.rs
api/tests/: api_integration.rs
api/tests/common/: mod.rs
(+213 files in other folders)
