[package]
name = "pumpkin-hub-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Middleware ecosystem
tower = "0.5"
tower-http = { version = "0.6", features = [
    "cors",
    "trace",
    "compression-gzip",
    "timeout",
    "request-id",
] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }

# Identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Environment variables
dotenvy = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
