[package]
name = "pumpkin-hub-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Middleware ecosystem
tower = "0.5"
tower-http = { version = "0.6", features = [
    "cors",
    "trace",
    "compression-gzip",
    "timeout",
    "request-id",
] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }

# Identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Environment variables
dotenvy = "0.15"

# OAuth 2.0
oauth2 = "5"

# HTTP client (for GitHub API calls)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# JWT authentication
jsonwebtoken = "9"

# Cookie support
axum-extra = { version = "0.10", features = ["cookie"] }

# Time (required by cookie builder)
time = "0.3"

# Random bytes for CSRF state
rand = "0.8"

# Password hashing (Argon2id)
argon2 = "0.5"

# Semantic versioning validation
semver = "1"

# S3-compatible object storage (MinIO local, Cloudflare R2 production)
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"

# Full-text search engine
meilisearch-sdk = "0.27"

# SHA-256 checksum generation
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
